<resources>
    <string name="app_name">MallAssignmentProject</string>
    <string name="action_settings">Settings</string>
    <string name="signin_textview">Login</string>
    <string name="error_login_textview">Error</string>
    <string name="username_placeholder">mobile no</string>
    <string name="password_placeholder">password</string>
    <string name="login_button">Login</string>
    <string name="category_name">Category :</string>
    <string name="area_name">Area :</string>
    <string name="city_name">City :</string>
</resources>
