<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signin_textview"
        android:text="@string/signin_textview"
        android:gravity="center"
        android:layout_marginTop="80dp"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/error_login_textview"
        android:gravity="center"
        android:textSize="15dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/username_edittext"
        android:layout_marginTop="30dp"
        android:hint="@string/username_placeholder"
        android:layout_gravity="center"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/password_edittext"
        android:layout_marginTop="30dp"
        android:hint="@string/password_placeholder"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:text="@string/login_button"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

</LinearLayout>