<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerview_relative_layout"
        android:layout_margin="3dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mall_name"
            android:layout_toRightOf="@+id/image"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category_name"
            android:layout_toRightOf="@+id/image"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/category_name"
            android:layout_below="@+id/mall_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category"
            android:layout_toRightOf="@+id/category_name"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/category_name"
            android:layout_below="@+id/mall_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/area_name"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/image"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/area_name"
            android:layout_below="@+id/category"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/area"
            android:layout_toRightOf="@+id/area_name"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/area_name"
            android:layout_below="@+id/category"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/city_name"
            android:layout_toRightOf="@+id/area"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/category"
            android:text="@string/city_name"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/city"
            android:layout_toRightOf="@+id/city_name"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/category"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>